turtleart.kerr36.Kerr36.scala.error
Compilation error:
Kerr36:7: error: value left is not a member of Unit
possible cause: maybe a semicolon is missing before `value left'?
    left(90),
    ^